# dance_bot

./: .env.example  README.md  README_PAYMENTS.md  config.py  main_payments_demo.py
dancestudio/backend/: Dockerfile  alembic.ini  pyproject.toml
dancestudio/backend/app/: config.py  main.py
dancestudio/backend/app/api/: deps.py
dancestudio/backend/app/api/routes/: __init__.py  (+10 more)
dancestudio/backend/app/core/: auth.py  constants.py  security.py
dancestudio/backend/app/db/: base.py  session.py
dancestudio/backend/app/services/: __init__.py  admin.py  booking_service.py  google_sheets.py  notification_service.py  payment_service.py  schedule_service.py  seed.py  settings_service.py  storage.py  subscription_service.py
dancestudio/backend/app/workers/: scheduler.py
dancestudio/backend/tests/: conftest.py  test_admin_seed.py  test_api_bookings.py  test_api_settings.py  test_api_slots.py  test_booking.py  test_bot_api.py  test_cancellation.py  test_payments.py  test_product_schemas.py  test_schedule.py  test_schedule_service.py
dancestudio/bot/: Dockerfile  app.py  config.py  pyproject.toml
dancestudio/bot/core/: __init__.py  config.py
dancestudio/bot/handlers/: __init__.py  menu.py  payments.py
dancestudio/bot/keyboards/: __init__.py  directions.py  main.py  products.py  slots.py
dancestudio/bot/middlewares/: logging.py
dancestudio/bot/services/: __init__.py  api_client.py  payments.py
dancestudio/bot/states/: booking.py  subscription.py
dancestudio/bot/tests/: test_config.py  test_payments_utils.py
dancestudio/bot/utils/: __init__.py  texts.py
(+69 files in other folders)
