[tool.poetry]
name = "dancestudio-bot"
version = "0.1.0"
description = "Dance Studio Telegram bot"
authors = ["Dance Studio Bot"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
httpx = "^0.27.0"
redis = "^5.0.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
